# horchd

./: .dockerignore  .domains  .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  LICENSE.md  README.md  astro.config.mjs  deploy.sh  eleventy.config.mjs  halfmoon.css  index.html  package.json  robots.txt  sitemap-0.xml  sitemap-index.xml  sitemap.xml
.forgejo/workflows/: docker.yml
.github/: README.md
.github/workflows/: ci.yml  release.yml
_astro/: index@_@astro.BhYUNhT4.css
assets/css/: horchd-docs.css  prism-nord.css
assets/js/: index.js
content/: content.11tydata.json  halfmoon.njk  home.md  robots.njk  sitemap.njk
content/_data/: site.js  urls.json
content/_includes/: contribution_invitation.njk  default_layout.njk  redirect.njk  toc-collapse.njk  toc-side.njk
content/getting-started/: index.md  install.md  quickstart.md
content/guides/: index.md  training.md
content/recipes/: bash-subscriber.md  home-assistant.md  index.md  process-audio.md  python-subscriber.md  rust-subscriber.md
content/reference/: configuration.md  dbus-api.md  index.md
content/support/: faq.md  index.md
crates/client/: Cargo.toml
crates/client/src/: audio.rs  config.rs  dbus.rs  error.rs  lib.rs  sink.rs
crates/gui/: .gitignore  README.md  package.json  svelte.config.js
crates/gui/src-tauri/: Cargo.toml
crates/gui/src-tauri/capabilities/: default.json
crates/gui/src-tauri/src/: commands.rs  events.rs  tray.rs
crates/gui/src/lib/: app.svelte.ts  dbus.ts  types.ts
crates/gui/src/lib/audio/: recordPcm.ts
crates/gui/src/lib/components/: CompactWake.svelte  MicMeter.svelte  SettingsTab.svelte  StatusPill.svelte  Ticker.svelte  Toast.svelte  TrainingEnvCard.svelte
crates/gui/src/routes/: +layout.ts
crates/horchctl/: Cargo.toml
crates/horchctl/src/: main.rs
crates/horchd/: Cargo.toml
crates/horchd-client/: Cargo.toml
crates/horchd-client/src/: error.rs
crates/horchd-core/: Cargo.toml
crates/horchd-core/src/: config.rs  dbus.rs  error.rs  event.rs  lib.rs
crates/horchd-gui/: Cargo.toml  README.md  package.json  tauri.conf.json
crates/horchd-gui/capabilities/: default.json
crates/horchd-gui/src/: app.css  commands.rs  events.rs  lib.rs  main.rs
crates/horchd-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/horchd-gui/src-tauri/capabilities/: default.json
crates/horchd-gui/src-tauri/src/: commands.rs  dbus_client.rs  lib.rs  tray.rs
crates/horchd-gui/src-web/: index.html  package.json  vite.config.ts
crates/horchd-gui/src-web/src/: app.css  app.html
crates/horchd-gui/src-web/src/lib/: app.svelte.ts  dbus.ts  state.svelte.ts  types.ts  utils.ts
crates/horchd-gui/src-web/src/lib/components/: AddModal.svelte  Gauge.svelte  Ticker.svelte  Toast.svelte  WakeCard.svelte
crates/horchd-gui/src-web/src/routes/: +layout.ts  +page.svelte
crates/horchd-gui/src/lib/: app.svelte.ts  dbus.ts  lyna.ts  types.ts
crates/horchd-gui/src/lib/audio/: recordPcm.ts
crates/horchd-gui/src/lib/components/: AddDialog.svelte  CompactWake.svelte  Gauge.svelte  MicMeter.svelte  SettingsTab.svelte  Spark.svelte  StatusPill.svelte  TabBar.svelte  Ticker.svelte  Toast.svelte  TrainTab.svelte  WakeCard.svelte
crates/horchd-gui/src/routes/: +page.svelte
crates/horchd-gui/src/routes/api/health/: +server.ts
crates/horchd-gui/static/audio-worklets/: pcm-encoder.js
crates/horchd/benches/: audio_callback.rs  detector.rs
crates/horchd/src/: audio.rs  detector.rs  inference.rs  lib.rs  main.rs  persist.rs  pipeline.rs  service.rs  state.rs
crates/horchd/src/audio/: file.rs  mic.rs  mod.rs  wyoming.rs
crates/horchd/src/sink/: dbus.rs  mod.rs  mpsc.rs
crates/horchd/src/wyoming/: handler.rs  info.rs  listener.rs  mod.rs  uri.rs  zeroconf.rs
crates/horchd/tests/: process_audio_smoke.rs
crates/horchd/tests/fixtures/: .gitignore  README.md  setup.sh
crates/wyoming/: Cargo.toml
crates/wyoming/src/: asr.rs  audio.rs  error.rs  event.rs  handle.rs  info.rs  intent.rs  lib.rs  macros.rs  mic.rs  snd.rs  timer.rs  tts.rs  wake.rs
crates/wyoming/tests/: wire_compat.rs
docker/: ATTRIBUTION.md  compose.example.yml  config.toml  entrypoint.sh
examples/: horchd.toml  subscriber.py  subscriber.sh
getting-started/: index.html
getting-started/install/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/training/: index.html
packaging/: install.sh
packaging/arch/: PKGBUILD
pagefind/: pagefind-entry.json  pagefind.en_1423b45e93.pf_meta  pagefind.en_42a85ab117.pf_meta  pagefind.en_4ee015fac2.pf_meta
pagefind/fragment/: en_15f97e7.pf_fragment  en_18a0f18.pf_fragment  en_1eb5bdb.pf_fragment  en_273ccc4.pf_fragment  en_27c012c.pf_fragment  en_2de27d3.pf_fragment  en_3cdf924.pf_fragment  en_3f343bc.pf_fragment  en_4dc3eae.pf_fragment  en_7bffaf5.pf_fragment  en_80e32e9.pf_fragment  en_83c39b5.pf_fragment  en_8d88e3b.pf_fragment  en_99d9202.pf_fragment  en_9db7655.pf_fragment  en_a5cf9e7.pf_fragment  en_a780d1d.pf_fragment  en_b9bae3a.pf_fragment  en_beb5198.pf_fragment  en_c06ab46.pf_fragment  en_c4c4955.pf_fragment  en_d16c55d.pf_fragment  en_e15f46c.pf_fragment  en_eafd45a.pf_fragment  en_f537737.pf_fragment
pagefind/index/: en_4e62e6b.pf_index  en_aaad878.pf_index  en_b59f9bd.pf_index
public/: .domains
python/: pyproject.toml
python/horchd_train/: __init__.py  augment.py  cli.py  emit.py  features.py  fetch.py  paths.py
recipes/: index.html
recipes/bash-subscriber/: index.html
recipes/home-assistant/: index.html
recipes/process-audio/: index.html
recipes/python-subscriber/: index.html
recipes/rust-subscriber/: index.html
reference/: index.html
reference/configuration/: index.html
reference/dbus-api/: index.html
scripts/: bench.sh  check.sh  coverage.sh
src/components/: Footer.astro  Header.astro  Oscilloscope.astro  Pipeline.astro  Readouts.astro  Why.astro
src/pages/: index.astro
src/styles/: global.css
support/: index.html
support/faq/: index.html
systemd/: horchd.service
