[workspace]
resolver = "2"
members = [
    "crates/horchctl",
    "crates/horchd",
    "crates/client",
    "crates/gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
authors = ["spitzli"]
repository = "https://github.com/horchd/horchd"
homepage = "https://horchd.xyz"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.2"
thiserror = "2.0.18"
tokio = { version = "1.52.1", default-features = false }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
doc_markdown = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
struct_field_names = "allow"
items_after_statements = "allow"
return_self_not_must_use = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
unused_async = "allow"
ignored_unit_patterns = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
explicit_iter_loop = "allow"
uninlined_format_args = "allow"
needless_range_loop = "allow"
match_bool = "allow"
map_unwrap_or = "allow"
redundant_closure_for_method_calls = "allow"
manual_find = "allow"
needless_continue = "allow"
single_match_else = "allow"
trivially_copy_pass_by_ref = "allow"
inline_always = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
