[package]
name = "horchctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI client for the horchd wakeword daemon"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
horchd-core = { version = "0.1.0", path = "../horchd-core" }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal"] }
zbus = "5.14.0"
