[package]
name = "horchctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI client for the horchd wakeword daemon"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
horchd-client = { version = "0.1.0", path = "../horchd-client" }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
sha2 = "0.10"
tokio = { workspace = true, features = ["rt", "macros", "signal", "time"] }
zbus.workspace = true
