[package]
name = "horchd-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types & D-Bus interface definitions for the horchd ecosystem"

[lints]
workspace = true

[dependencies]
serde.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
toml.workspace = true
zbus.workspace = true
