[package]
name = "horchd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Native multi-wakeword detection daemon with D-Bus event broadcasting"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.17.3"
horchd-core = { version = "0.1.0", path = "../horchd-core" }
libc = "0.2.186"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "signal", "time"] }
toml = "1.1.2"
toml_edit = "0.25.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zbus = "5.14.0"

[[bin]]
name = "horchd"
path = "src/main.rs"
