[package]
name = "horchd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Native multi-wakeword detection daemon with D-Bus event broadcasting"

[lints]
workspace = true

[features]
# Default: ship a self-contained binary by statically linking the
# libonnxruntime that `ort`'s build script downloads. Yields a ~29 MB
# binary that needs no extra system packages.
default = ["bundled-onnxruntime"]

# Static-link path. Pick one of these two and not both.
bundled-onnxruntime = ["ort/download-binaries", "ort/tls-rustls", "ort/copy-dylibs"]

# Dynamic-link path. The binary drops to ~5–7 MB but requires
# `libonnxruntime.so` on the runtime system (Arch: `pacman -S onnxruntime`,
# Debian: ship via package depends). Build with:
#   cargo build --release --no-default-features --features dynamic-onnxruntime
dynamic-onnxruntime = ["ort/load-dynamic"]

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
clap.workspace = true
cpal = "0.17.3"
horchd-client = { version = "0.1.0", path = "../client" }
horchd-wyoming = { version = "0.1.0", path = "../wyoming" }
hostname = "0.4.2"
hound = "3.5.1"
if-addrs = "0.15"
libc = "0.2.186"
mdns-sd = "0.19"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "api-24"] }
serde.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "signal", "time", "net", "io-util", "io-std"] }
toml.workspace = true
toml_edit = "0.25.11"
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }

[lib]
name = "horchd"
path = "src/lib.rs"

[[bin]]
name = "horchd"
path = "src/main.rs"

[[bench]]
name = "detector"
harness = false

[[bench]]
name = "audio_callback"
harness = false
