[package]
name = "horchd-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tauri tray app + control panel for the horchd wakeword daemon"

# Building this crate requires Linux dev headers
# (`webkit2gtk-4.1-dev`, `librsvg2-dev`, `libayatana-appindicator3-dev`,
# `libxdo-dev`) and (for `cargo tauri build/dev`) the tauri-cli.

[lib]
name = "horchd_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
futures-util = "0.3"
horchd-core = { version = "0.1.0", path = "../../horchd-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "5"
