[package]
name = "horchd-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tauri tray app + control panel for the horchd wakeword daemon"

# Building this crate requires Linux dev headers
# (`webkit2gtk-4.1-dev`, `librsvg2-dev`, `libayatana-appindicator3-dev`,
# `libxdo-dev`) and (for `cargo tauri build/dev`) the tauri-cli.

[lints]
workspace = true

[lib]
name = "horchd_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
horchd-client = { version = "0.1.0", path = "../../horchd-client" }
hound = "3"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
which = "8"
zbus.workspace = true
